added few unit tests and added account status endpoint
